# assist_ops_env

./: Dockerfile  README.md  __init__.py  client.py  grader.py  inference.py  models.py  openenv.yaml  openevn.yaml  pyproject.toml  requirements.txt  tasks.py
_scaffold_check/assist_ops_clean/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
_scaffold_check/assist_ops_clean/server/: Dockerfile  __init__.py  app.py  assist_ops_clean_environment.py
api/: __init__.py  main.py
api/__pycache__/: main.cpython-314.pyc.1908256914720  main.cpython-314.pyc.3113307558160
baseline/: run_agent.py
env/: environment.py  grader.py  models.py
graders/: __init__.py  graders.py
server/: __init__.py  app.py  assist_ops_env_environment.py
server/__pycache__/: app.cpython-314.pyc.1651710452752  app.cpython-314.pyc.2785038328848
tasks/: __init__.py  registry.py
tests/: test_server_app.py  test_submission_contract.py
