[project]
name = "assist-ops-env"
version = "0.1.0"
description = "Assist Ops environment for Scaler hackathon"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
    "openai>=1.30.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"